--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
     <link rel="manifest" href="./site.webmanifest" />
 
-    <script src="/js/wordspeller.js" defer></script>
+    <script src="./js/wordspeller.js" defer></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script
